--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-title: Discord Themes & Plugins | BetterDocs
+title: Discord Themes & Plugins |
 hero: The Discord Ehancement Project.
 subtitle: Custom CSS themes + JS plugins, BTTV & FFZ twitch emotes and lots of extra tools.
 layout: main
