--- a/themes.html
+++ b/themes.html
@@ -13,7 +13,8 @@ search: true
 			<h2>Themes ({{ site.themes | size }})</h2>
 			<p class="editor-link" style="text-align: center;"><a href="cloudcannon:collections/_products" class="btn"><strong>&#9998;</strong> Manage products</a></p>
 			<ul class="product-list" id="product-list">
-				{% for theme in site.themes %}
+				{% assign sortedThemes = site.themes | sort: 'title' %}
+				{% for theme in sortedThemes %}
 					<li>
 						<div class="styles">
 						{% include product-styles.html product=theme %}
