--- a/plugins.html
+++ b/plugins.html
@@ -46,7 +46,7 @@ search: true
 		</div>
 	</section>
 </div>
-<a href="https://github.com/MrRobotjs/BetterDocs/edit/master/_pluginss/_defaults.md">
+<a href="https://github.com/MrRobotjs/BetterDocs/tree/gh-pages/pluginss#uploading-a-plugin">
 	<div class="upload-button-container">
 		<div class="upload-btn">
 			<span>+</span> Upload Plugin
