--- a/themes.html
+++ b/themes.html
@@ -46,7 +46,7 @@ search: true
 		</div>
 	</section>
 </div>
-<a href="https://github.com/MrRobotjs/BetterDocs/edit/master/_themes/_defaults.md">
+<a href="https://github.com/MrRobotjs/BetterDocs/tree/gh-pages/_themes#uploading-a-theme">
 <div class="upload-button-container">
 	<div class="upload-btn">
 		<span>+</span> Upload Theme
