--- a/plugins.html
+++ b/plugins.html
@@ -14,6 +14,13 @@ search: true
 			<h2>Plugins ({{ site.pluginss | size }})</h2>
 			<p class="editor-link" style="text-align: center;"><a href="cloudcannon:collections/_products" class="btn"><strong>&#9998;</strong> Manage products</a></p>
 			<ul class="product-list" id="product-list">
+				<ins class="adsbygoogle"
+					style="display:block"
+					data-ad-format="fluid"
+					data-ad-layout-key="-gr-3+1f-3d+2z"
+					data-ad-client="ca-pub-1998206533560539"
+					data-ad-slot="4286144158">
+				</ins>
 				{% assign sortedPluginss = site.pluginss | sort: 'title' %}
 				{% for plugins in sortedPluginss %}
 					<li>
@@ -39,6 +46,13 @@ search: true
 						</div>
 					</li>
 				{% endfor %}
+				<ins class="adsbygoogle"
+					style="display:block"
+					data-ad-format="fluid"
+					data-ad-layout-key="-gr-3+1f-3d+2z"
+					data-ad-client="ca-pub-1998206533560539"
+					data-ad-slot="4286144158">
+				</ins>
 				<li></li>
 				<li></li>
 				<li></li>
