--- a/themes.html
+++ b/themes.html
@@ -13,6 +13,13 @@ search: true
 			<h2>Themes ({{ site.themes | size }})</h2>
 			<p class="editor-link" style="text-align: center;"><a href="cloudcannon:collections/_products" class="btn"><strong>&#9998;</strong> Manage products</a></p>
 			<ul class="product-list" id="product-list">
+				<ins class="adsbygoogle"
+					style="display:block"
+					data-ad-format="fluid"
+					data-ad-layout-key="-6d+cx+1g+47-2e"
+					data-ad-client="ca-pub-1998206533560539"
+					data-ad-slot="7952435730">
+				</ins>
 				{% assign sortedThemes = site.themes | sort: 'title' %}
 				{% for theme in sortedThemes %}
 					<li>
@@ -39,6 +46,13 @@ search: true
 						</div>
 					</li>
 				{% endfor %}
+				<ins class="adsbygoogle"
+					style="display:block"
+					data-ad-format="fluid"
+					data-ad-layout-key="-6d+cx+1g+47-2e"
+					data-ad-client="ca-pub-1998206533560539"
+					data-ad-slot="7952435730">
+				</ins>
 				<li></li>
 				<li></li>
 				<li></li>
