--- a/themes.html
+++ b/themes.html
@@ -42,6 +42,14 @@ search: true
 				<li></li>
 				<li></li>
 				<li></li>
+				<!-- Third Ad Responsive -->
+				<ins class="adsbygoogle"
+					style="display:block"
+					data-ad-client="ca-pub-1998206533560539"
+					data-ad-slot="9689023387"
+					data-ad-format="auto"
+					data-full-width-responsive="true">
+				</ins>
 			</ul>
 		</div>
 	</section>
