--- a/plugins.html
+++ b/plugins.html
@@ -43,13 +43,13 @@ search: true
 				<li></li>
 				<li></li>
 				<!-- Third Ad Responsive -->
-				<ins class="adsbygoogle"
+				<li><div class="styles"><ins class="adsbygoogle"
 					style="display:block"
 					data-ad-client="ca-pub-1998206533560539"
 					data-ad-slot="9689023387"
 					data-ad-format="auto"
 					data-full-width-responsive="true">
-				</ins>
+				</ins></div></li>
 			</ul>
 		</div>
 	</section>
