--- a/themes.html
+++ b/themes.html
@@ -39,9 +39,6 @@ search: true
 						</div>
 					</li>
 				{% endfor %}
-				<li></li>
-				<li></li>
-				<li></li>
 				<!-- Third Ad Responsive -->
 				<li><div class="styles"><ins class="adsbygoogle"
 					style="display:block"
@@ -50,6 +47,25 @@ search: true
 					data-ad-format="auto"
 					data-full-width-responsive="true">
 				</ins></div></li>
+				<!-- Third Ad Responsive -->
+				<li><div class="styles"><ins class="adsbygoogle"
+					style="display:block"
+					data-ad-client="ca-pub-1998206533560539"
+					data-ad-slot="9689023387"
+					data-ad-format="auto"
+					data-full-width-responsive="true">
+				</ins></div></li>
+				<!-- Third Ad Responsive -->
+				<li><div class="styles"><ins class="adsbygoogle"
+					style="display:block"
+					data-ad-client="ca-pub-1998206533560539"
+					data-ad-slot="9689023387"
+					data-ad-format="auto"
+					data-full-width-responsive="true">
+				</ins></div></li>
+				<li></li>
+				<li></li>
+				<li></li>
 			</ul>
 		</div>
 	</section>
