--- a/themes.html
+++ b/themes.html
@@ -39,14 +39,12 @@ search: true
 						</div>
 					</li>
 				{% endfor %}
-				<!-- Third Ad Responsive -->
-				<li><div class="styles"><ins class="adsbygoogle"
-					style="display:block"
-					data-ad-client="ca-pub-1998206533560539"
-					data-ad-slot="9689023387"
-					data-ad-format="auto"
-					data-full-width-responsive="true">
-				</ins></div></li>
+				<!-- Rectangle Ad 336x280 -->
+				<li><div class="styles">
+					<ins class="adsbygoogle"
+						 style="display:inline-block;width:336px;height:280px"
+						 data-ad-client="ca-pub-1998206533560539"
+						 data-ad-slot="8585740998"></ins></div></li>
 				<!-- Third Ad Responsive -->
 				<li><div class="styles"><ins class="adsbygoogle"
 					style="display:block"
