--- a/plugins.html
+++ b/plugins.html
@@ -14,6 +14,14 @@ search: true
 			<h2>Plugins ({{ site.pluginss | size }})</h2>
 			<p class="editor-link" style="text-align: center;"><a href="cloudcannon:collections/_products" class="btn"><strong>&#9998;</strong> Manage products</a></p>
 			<ul class="product-list" id="product-list">
+				<!-- Third Ad Responsive -->
+				<li><div class="styles"><ins class="adsbygoogle"
+					style="display:block"
+					data-ad-client="ca-pub-1998206533560539"
+					data-ad-slot="9689023387"
+					data-ad-format="auto"
+					data-full-width-responsive="true">
+				</ins></div></li>
 				{% assign sortedPluginss = site.pluginss | sort: 'title' %}
 				{% for plugins in sortedPluginss %}
 					<li>
@@ -39,22 +47,12 @@ search: true
 						</div>
 					</li>
 				{% endfor %}
-				<!-- Third Ad Responsive -->
-				<li><div class="styles"><ins class="adsbygoogle"
-					style="display:block"
-					data-ad-client="ca-pub-1998206533560539"
-					data-ad-slot="9689023387"
-					data-ad-format="auto"
-					data-full-width-responsive="true">
-				</ins></div></li>
-				<!-- Third Ad Responsive -->
-				<li><div class="styles"><ins class="adsbygoogle"
-					style="display:block"
-					data-ad-client="ca-pub-1998206533560539"
-					data-ad-slot="9689023387"
-					data-ad-format="auto"
-					data-full-width-responsive="true">
-				</ins></div></li>
+				<!-- Rectangle Ad 336x280 -->
+				<li><div class="styles">
+						<ins class="adsbygoogle"
+							 style="display:inline-block;width:336px;height:280px"
+							 data-ad-client="ca-pub-1998206533560539"
+							 data-ad-slot="8585740998"></ins></div></li>
 				<!-- Third Ad Responsive -->
 				<li><div class="styles"><ins class="adsbygoogle"
 					style="display:block"
