--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 title: Discord Themes & Plugins |
-hero: The Discord Ehancement Project.
+hero: The Discord Enhancement Project.
 subtitle: Custom CSS themes + JS plugins, BTTV & FFZ twitch emotes and lots of extra tools.
 layout: main
 download: https://github.com/rauenzi/BetterDiscordApp/releases
