--- a/admin/index.html
+++ b/admin/index.html
@@ -20,5 +20,11 @@
   }
 </script>
 <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+<style>
+svg[viewBox="0 0 182 47"],
+.callOut {
+    display: none !important;
+}
+</style>
 </body>
 </html>
