--- a/admin/index.html
+++ b/admin/index.html
@@ -7,7 +7,17 @@
 </head>
 <body>
 <!-- Include the script that builds the page and powers Netlify CMS -->
-
+<script>
+if (window.netlifyIdentity) {
+	window.netlifyIdentity.on("init", user => {
+		if (!user) {
+			window.netlifyIdentity.on("login", () => {
+				document.location.href = "/admin/";
+			});
+		}
+	});
+}
+</script>
 <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </body>
 <style>
