--- a/admin/index.html
+++ b/admin/index.html
@@ -19,6 +19,7 @@ if (window.netlifyIdentity) {
 }
 </script>
 <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+<script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
 </body>
 <style>
 svg[viewBox="0 0 182 47"],
