--- a/plugins.html
+++ b/plugins.html
@@ -31,7 +31,7 @@ search: true
 							<h4><a href="{{ plugins.url }}">{{ plugins.title }}</a></h4>
 							<h5>by <b>{{ plugins.author }}</b></h5>
 							<div class="product-description">
-								{{ plugins.description_markdown | truncate: 150 | markdownify }}
+								{{ plugins.description_markdown | truncate: 150 }}
 							</div>
 							{% if plugins.price == nil %}
 							{% else %}
