--- a/plugins.html
+++ b/plugins.html
@@ -7,7 +7,6 @@ layout: default
 type: plugin
 search: true
 ---
-
 <div class="content" id="plugins">
 	<section style="padding: 40px 0;">
 		<div class="container">
@@ -37,7 +36,7 @@ search: true
 							{% else %}
 							<p>${{ plugins.price }}</p>
 							{% endif %}
-							<div class="button-wrapper flex-row">
+							<div class="button-wrapper flex-row" id="add2">
 								<div class="button flex-button">
 									<a href="{{ plugins.download }}" target="blank">Download</a>
 									<a href="{{ plugins.support }}" target="blank">Support</a>
@@ -46,6 +45,9 @@ search: true
 						</div>
 						</div>
 					</li>
+					<script type="text/javascript">
+						DoGithubComments({{ plugins.ghcommentid }});
+					</script>
 				{% endfor %}
 				<!-- Rectangle Ad 336x280 -->
 				<li><div class="styles">
@@ -89,39 +91,6 @@ search: true
 			});
 		});
 	});
-	/*
-	$(function() {
-		$.fn.sortList = function() {
-			var mylist = $(this);
-			var listitems = $('li', mylist).get();
-			listitems.sort(function(a, b) {
-				var compA = $(a).text().toUpperCase();
-				var compB = $(b).text().toUpperCase();
-				return (compA < compB) ? -1 : 1;
-			});
-			$.each(listitems, function(i, itm) {
-				mylist.append(itm);
-			});
-		}
-		$("ul#product-list").sortList();
-	});
-	
-	selector to parent element (best approach by id)
-	var parent = document.querySelector("ul#product-list"),
-		take items (parent.children) into array
-		itemsArray = Array.prototype.slice.call(parent.children);
-	sort items in array by custom criteria
-	itemsArray.sort(function(a, b) {
-		inner text suits best (even when formated somehow)
-		if (a.innerText < b.innerText) return -1;
-		if (a.innerText > b.innerText) return 1;
-		return 0;
-	});
-	reorder items in the DOM
-	itemsArray.forEach(function(item) {
-		one by one move to the end in correct order
-		parent.appendChild(item);
-	});*/
 	var count = $('ul#product-list').children().length;
 	$('#result').text(count);
 </script>
