--- a/plugins.html
+++ b/plugins.html
@@ -11,6 +11,9 @@ search: true
 	<section style="padding: 40px 0;">
 		<div class="container">
 			<h2>Plugins ({{ site.pluginss | size }})</h2>
+			<div class="section-btn"> 
+				<a href="https://github.com/MrRobotjs/BetterDocs/tree/gh-pages/_pluginss#uploading-a-plugin" target="blank" class="btn section">Add Plugin</a> 
+			</div>
 			<p class="editor-link" style="text-align: center;"><a href="cloudcannon:collections/_products" class="btn"><strong>&#9998;</strong> Manage products</a></p>
 			<ul class="product-list" id="product-list">
 				<!-- Third Ad Responsive -->
@@ -70,11 +73,9 @@ search: true
 		</div>
 	</section>
 </div>
-<a href="https://github.com/MrRobotjs/BetterDocs/tree/gh-pages/_pluginss#uploading-a-plugin">
-	<div class="upload-button-container">
-		<div class="upload-btn">
-			<span>+</span> Upload Plugin
-		</div>
+<a class="help-btn" href="https://support.{{ base.url }}"> 
+	<div class="white">
+		?
 	</div>
 </a>
 <script>
