--- a/plugins.html
+++ b/plugins.html
@@ -11,7 +11,7 @@ search: true
 	<section style="padding: 40px 0;">
 		<div class="container">
 			<h2>Plugins ({{ site.pluginss | size }})</h2>
-			<div class="section-btn"> 
+			<div class="button section-btn"> 
 				<a href="https://github.com/MrRobotjs/BetterDocs/tree/gh-pages/_pluginss#uploading-a-plugin" target="blank" class="btn section">Add Plugin</a> 
 			</div>
 			<p class="editor-link" style="text-align: center;"><a href="cloudcannon:collections/_products" class="btn"><strong>&#9998;</strong> Manage products</a></p>
