--- a/themes.html
+++ b/themes.html
@@ -11,7 +11,7 @@ search: true
 	<section style="padding: 40px 0;">
 		<div class="container">
 			<h2>Themes ({{ site.themes | size }})</h2>
-			<div class="section-btn"> 
+			<div class="button section-btn"> 
 				<a href="https://github.com/MrRobotjs/BetterDocs/tree/gh-pages/_themes#uploading-a-theme" target="blank" class="btn section">Add Theme</a> 
 			</div>
 			<p class="editor-link" style="text-align: center;"><a href="cloudcannon:collections/_products" class="btn"><strong>&#9998;</strong> Manage products</a></p>
