--- a/plugins.html
+++ b/plugins.html
@@ -73,7 +73,7 @@ search: true
 		</div>
 	</section>
 </div>
-<a class="help-btn" href="https://support.{{ base.url }}"> 
+<a class="help-btn" href="https://support.{{ site.url }}"> 
 	<div class="white">
 		?
 	</div>
