--- a/themes.html
+++ b/themes.html
@@ -71,7 +71,7 @@ search: true
 		</div>
 	</section>
 </div>
-<a class="help-btn" href="https://support.betterdocs.us"> 
+<a class="help-btn" href="https://documentation.betterdocs.us"> 
 	<div class="white">
 		?
 	</div>
