Added filters WIP

--- a/plugins/BandagedBD.html
+++ b/plugins/BandagedBD.html
@@ -1,14 +1,14 @@
 ---
-title: Discord themes & plugins!
+title: BandagedBD themes & plugins!
 description: Free quality Themes and Plugins for Discord and easy installation instructions for BetterDiscord and more!
-hero: Discord Plugins
+hero: BandagedBD Plugins
 subtitle: Custom JS plugins made by our commuity!
 layout: default
 type: plugin
 search: true
 ---
 <div class="content" id="plugins">
-	<div class="filter-container">
+    <div class="filter-container">
 		{% for filter in site.data.filters.plugins %}
 		{% assign class = "" %}
 		{% if filter.highlight %}
