--- a/plugins/BetterDiscord.html
+++ b/plugins/BetterDiscord.html
@@ -21,7 +21,7 @@ search: true
 			{% assign class = class | append: " active" %}
 		{% endif %}
 		<a {% if filter.disabled %}{% else %}href="{% include relative-src.html src=filter.link %}"{% endif %} class="{{ filter.name }}{{ class }}">
-			<div class="filters">{{ filter.name }}</div>
+			<div class="filters">{% if filter.icon %}<div class="filter-i"><img class="filter-icon" src="{{ filter.icon }}"></div>{% endif %}{{ filter.name }}</div>
 		</a>
 		{% endfor %}
     </div>
