--- a/plugins.html
+++ b/plugins.html
@@ -8,23 +8,7 @@ type: plugin
 search: true
 ---
 <div class="content" id="plugins">
-	<div class="filter-container">
-		{% for filter in site.data.filters.plugins %}
-		{% assign class = "" %}
-		{% if filter.highlight %}
-			{% assign class = class | append: " highlight" %}
-		{% endif %}
-		{% if filter.disabled %}
-			{% assign class = class | append: " disabled" %}
-		{% endif %}
-		{% if filter.link == page.url %}
-			{% assign class = class | append: " active" %}
-		{% endif %}
-		<a {% if filter.disabled %}{% else %}href="{% include relative-src.html src=filter.link %}"{% endif %} class="{{ filter.name }}{{ class }}">
-			<div class="filters">{% if filter.icon %}<div class="filter-i"><img class="filter-icon" src="{{ filter.icon }}"></div>{% endif %}{{ filter.name }}</div>
-		</a>
-		{% endfor %}
-    </div>
+	{% include plugin-filter.html %}
 	<section style="padding: 0px 0px 20px 0px;">
 		<div class="container">
 			<h2>Plugins ({{ site.plugins | size }})</h2>
