--- a/themes/DiscordInjections.html
+++ b/themes/DiscordInjections.html
@@ -8,23 +8,7 @@ search: true
 ---
 
 <div class="content" id="themes">
-	<div class="filter-container">
-		{% for filter in site.data.filters.themes %}
-		{% assign class = "" %}
-		{% if filter.highlight %}
-			{% assign class = class | append: " highlight" %}
-		{% endif %}
-		{% if filter.disabled %}
-			{% assign class = class | append: " disabled" %}
-		{% endif %}
-		{% if filter.link == page.url %}
-			{% assign class = class | append: " active" %}
-		{% endif %}
-		<a {% if filter.disabled %}{% else %}href="{% include relative-src.html src=filter.link %}"{% endif %} class="{{ filter.name }}{{ class }}">
-			<div class="filters">{% if filter.icon %}<div class="filter-i"><img class="filter-icon" src="{{ filter.icon }}"></div>{% endif %}{{ filter.name }}</div>
-		</a>
-		{% endfor %}
-    </div>
+	{% include theme-filter.html %}
 	<section style="padding: 0px 0px 20px 0px;">
 		<div class="container">
 			<h2>Themes ({{ site.themes | size }})</h2>
@@ -43,6 +27,7 @@ search: true
 				</ins></div></li>
 				{% assign sortedThemes = site.themes | sort: 'title' %}
 				{% for theme in sortedThemes %}
+				{% if theme.tags == "DiscordInjections" %}
 					<li>
 						<div class="styles">
 						{% include product-styles.html product=theme %}
@@ -66,6 +51,7 @@ search: true
 						</div>
 						</div>
 					</li>
+					{% endif %}
 				{% endfor %}
 				<!-- Rectangle Ad 336x280 -->
 				<li><div class="styles">
