--- a/themes/BetterDiscord.html
+++ b/themes/BetterDiscord.html
@@ -5,13 +5,14 @@ hero: BetterDiscord Themes
 subtitle: Custom CSS themes made by our commuity!
 layout: default
 search: true
+count: true
 ---
 
 <div class="content" id="themes">
 	{% include theme-filter.html %}
 	<section style="padding: 0px 0px 20px 0px;">
 		<div class="container">
-			<h2>Themes ({{ site.themes | size }})</h2>
+			<h2>Themes</h2>
 			<div class="button section-btn"> 
 				<a href="https://github.com/MrRobotjs/BetterDocs/tree/gh-pages/_themes#uploading-a-theme" target="blank" class="btn section">Add Theme</a> 
 			</div>
