--- a/plugins.html
+++ b/plugins.html
@@ -6,12 +6,13 @@ subtitle: Custom JS plugins made by our commuity!
 layout: default
 type: plugin
 search: true
+count: true
 ---
 <div class="content" id="plugins">
 	{% include plugin-filter.html %}
 	<section style="padding: 0px 0px 20px 0px;">
 		<div class="container">
-			<h2>Plugins ({{ site.plugins | size }})</h2>
+			<h2>Plugins</h2>
 			<div class="button section-btn"> 
 				<a href="https://github.com/MrRobotjs/BetterDocs/tree/gh-pages/_plugins#uploading-a-plugin" target="blank" class="btn section">Add Plugin</a> 
 			</div>
