--- a/themes.html
+++ b/themes.html
@@ -1,17 +1,18 @@
 ---
 title: Discord themes & plugins!
 description: A list of free and paid high quality themes made by our community. For the past 3 years we have been the #1 go to website for all Discord themes!
-hero: Discord Themes
+hero: Discord Themes Now For Free!
 subtitle: Custom CSS themes made by our commuity!
 layout: default
 search: true
+count: true
 ---
 
 <div class="content" id="themes">
 	{% include theme-filter.html %}
 	<section style="padding: 0px 0px 20px 0px;">
 		<div class="container">
-			<h2>Themes ({{ site.themes | size }})</h2>
+			<h2>Themes</h2>
 			<div class="button section-btn"> 
 				<a href="https://github.com/MrRobotjs/BetterDocs/tree/gh-pages/_themes#uploading-a-theme" target="blank" class="btn section">Add Theme</a> 
 			</div>
