--- a/plugins.html
+++ b/plugins.html
@@ -6,7 +6,7 @@ subtitle: Custom JS plugins made by our commuity!
 layout: default
 type: plugin
 search: true
-count: true
+plugins: true
 ---
 <div class="content" id="plugins">
 	{% include plugin-filter.html %}
