--- a/themes.html
+++ b/themes.html
@@ -5,7 +5,7 @@ hero: Discord Themes Now For Free!
 subtitle: Custom CSS themes made by our commuity!
 layout: default
 search: true
-count: true
+themes: true
 ---
 
 <div class="content" id="themes">
