--- a/plugins/BetterDiscord.html
+++ b/plugins/BetterDiscord.html
@@ -7,6 +7,7 @@ layout: default
 type: plugin
 search: true
 count: true
+plugins: true
 ---
 <div class="content" id="plugins">
     {% include plugin-filter.html %}
