--- a/themes/DiscordInjections.html
+++ b/themes/DiscordInjections.html
@@ -6,6 +6,7 @@ subtitle: Custom CSS themes made by our commuity!
 layout: default
 search: true
 count: true
+themes: true
 ---
 
 <div class="content" id="themes">
