--- a/plugins/BandagedBD.html
+++ b/plugins/BandagedBD.html
@@ -8,6 +8,7 @@ type: plugin
 search: true
 count: true
 plugins: true
+BandagedBD: true
 ---
 <div class="content" id="plugins">
     {% include plugin-filter.html %}
