--- a/plugins/BeautifulDiscord.html
+++ b/plugins/BeautifulDiscord.html
@@ -8,6 +8,7 @@ type: plugin
 search: true
 count: true
 plugins: true
+BeautifulDiscord: true
 ---
 <div class="content" id="plugins">
     {% include plugin-filter.html %}
