--- a/plugins.html
+++ b/plugins.html
@@ -1,7 +1,7 @@
 ---
 title: Discord themes & plugins!
 description: Free quality Themes and Plugins for Discord and easy installation instructions for BetterDiscord and more!
-hero: Discord Plugins
+hero: Discord Plugins Now For Free!
 subtitle: Custom JS plugins made by our commuity!
 layout: default
 type: plugin
