--- a/plugins.html
+++ b/plugins.html
@@ -48,7 +48,7 @@ plugins: true
 							{% endif %}
 							<div class="button-wrapper flex-row" id="add2">
 								<div class="button flex-button">
-									<a href="{{ plugins.download }}" target="blank">Download</a>
+									<a href="{% if plugins.auto == true %}https://minhaskamal.github.io/DownGit/#/home?url={% endif %}{{ plugins.download }}" target="blank">Download</a>
 									<a href="{{ plugins.support }}" target="blank">Support</a>
 								</div>
 							</div>
