--- a/themes/EnhancedDiscord.html
+++ b/themes/EnhancedDiscord.html
@@ -27,8 +27,8 @@ EnhancedDiscord: true
 					data-ad-format="auto"
 					data-full-width-responsive="true">
 				</ins></div></li>
-				{% assign sortedThemes = site.themes | sort: 'title' %}
-				{% for theme in sortedThemes %}
+				{% for theme in site.themes %}
+				{% if theme.software contains "EnhancedDiscord" %}
 					<li>
 						<div class="styles">
 						{% include product-styles.html product=theme %}
@@ -62,6 +62,7 @@ EnhancedDiscord: true
 						</div>
 						</div>
 					</li>
+					{% endif %}
 				{% endfor %}
 				<!-- Rectangle Ad 336x280 -->
 				<li><div class="styles">
