--- a/plugins/EnhancedDiscord.html
+++ b/plugins/EnhancedDiscord.html
@@ -27,8 +27,8 @@ EnhancedDiscord: true
 					data-ad-format="auto"
 					data-full-width-responsive="true">
 				</ins></div></li>
-				{% assign sortedplugins = site.plugins | sort: 'title' %}
-				{% for plugins in sortedplugins %}
+				{% for plugins in site.plugins %}
+				{% if plugins.software contains "EnhancedDiscord" %}
 					<li>
 						<div class="styles">
 						<!-- {% include product-styles.html product=plugins %} -->
@@ -56,9 +56,7 @@ EnhancedDiscord: true
 						</div>
 						</div>
 					</li>
-					<script type="text/javascript">
-						DoGithubComments({{ plugins.ghcommentid }});
-					</script>
+					{% endif %}
 				{% endfor %}
 				<!-- Rectangle Ad 336x280 -->
 				<li><div class="styles">
