--- a/themes/BetterDiscord.html
+++ b/themes/BetterDiscord.html
@@ -26,8 +26,8 @@ themes: true
 					data-ad-format="auto"
 					data-full-width-responsive="true">
 				</ins></div></li>
-				{% assign sortedThemes = site.themes | sort: 'title' %}
-				{% for theme in sortedThemes %}
+				{% for theme in site.themes %}
+				{% if theme.software contains "BetterDiscord" %}
 					<li>
 						<div class="styles">
 						{% include product-styles.html product=theme %}
@@ -56,6 +56,7 @@ themes: true
 						</div>
 						</div>
 					</li>
+					{% endif %}
 				{% endfor %}
 				<!-- Rectangle Ad 336x280 -->
 				<li><div class="styles">
