--- a/themes/DiscordInjections.html
+++ b/themes/DiscordInjections.html
@@ -26,9 +26,8 @@ themes: true
 					data-ad-format="auto"
 					data-full-width-responsive="true">
 				</ins></div></li>
-				{% assign sortedThemes = site.themes | sort: 'title' %}
-				{% for theme in sortedThemes %}
-				{% if theme.tags == "DiscordInjections" %}
+				{% for theme in site.themes %}
+				{% if theme.software contains "DiscordInjections" %}
 					<li>
 						<div class="styles">
 						{% include product-styles.html product=theme %}
